src/main/java/org/graylog/plugins/threatmanager/parser/RuleLangParser.java
package org.graylog.plugins.threatmanager.parser;// Generated from C:/Data/graylog-plugin-threat-manager/src/main/antlr4/org/graylog/plugins/pipelineprocessor/parser\RuleLang.g4 by ANTLR 4.6

import org.graylog.plugins.threatmanager.ast.expressions.Expression;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RuleLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, All=23, Either=24, And=25, 
		Or=26, Not=27, Pipeline=28, Rule=29, During=30, Stage=31, When=32, Then=33, 
		End=34, Let=35, Match=36, MessageRef=37, Boolean=38, Integer=39, Float=40, 
		Char=41, String=42, Identifier=43, WS=44, COMMENT=45, LINE_COMMENT=46;
	public static final int
		RULE_file = 0, RULE_pipelineDecls = 1, RULE_pipeline = 2, RULE_pipelineDeclaration = 3, 
		RULE_stageDeclaration = 4, RULE_ruleRef = 5, RULE_ruleDecls = 6, RULE_ruleDeclaration = 7, 
		RULE_expression = 8, RULE_propAssignment = 9, RULE_statement = 10, RULE_functionCall = 11, 
		RULE_arguments = 12, RULE_literal = 13;
	public static final String[] ruleNames = {
		"file", "pipelineDecls", "pipeline", "pipelineDeclaration", "stageDeclaration", 
		"ruleRef", "ruleDecls", "ruleDeclaration", "expression", "propAssignment", 
		"statement", "functionCall", "arguments", "literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'('", "')'", "'['", "','", "']'", "'{'", "'}'", "'.'", "'+'", 
		"'-'", "'*'", "'/'", "'%'", "'<='", "'>='", "'>'", "'<'", "'=='", "'!='", 
		"':'", "'='", null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "'$message'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "All", 
		"Either", "And", "Or", "Not", "Pipeline", "Rule", "During", "Stage", "When", 
		"Then", "End", "Let", "Match", "MessageRef", "Boolean", "Integer", "Float", 
		"Char", "String", "Identifier", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RuleLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RuleLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RuleLangParser.EOF, 0); }
		public List<RuleDeclarationContext> ruleDeclaration() {
			return getRuleContexts(RuleDeclarationContext.class);
		}
		public RuleDeclarationContext ruleDeclaration(int i) {
			return getRuleContext(RuleDeclarationContext.class,i);
		}
		public List<PipelineDeclarationContext> pipelineDeclaration() {
			return getRuleContexts(PipelineDeclarationContext.class);
		}
		public PipelineDeclarationContext pipelineDeclaration(int i) {
			return getRuleContext(PipelineDeclarationContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleLangVisitor ) return ((RuleLangVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(30);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Rule:
					{
					setState(28);
					ruleDeclaration();
					}
					break;
				case Pipeline:
					{
					setState(29);
					pipelineDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(32); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Pipeline || _la==Rule );
			setState(34);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PipelineDeclsContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RuleLangParser.EOF, 0); }
		public List<PipelineDeclarationContext> pipelineDeclaration() {
			return getRuleContexts(PipelineDeclarationContext.class);
		}
		public PipelineDeclarationContext pipelineDeclaration(int i) {
			return getRuleContext(PipelineDeclarationContext.class,i);
		}
		public PipelineDeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pipelineDecls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).enterPipelineDecls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).exitPipelineDecls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleLangVisitor ) return ((RuleLangVisitor<? extends T>)visitor).visitPipelineDecls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PipelineDeclsContext pipelineDecls() throws RecognitionException {
		PipelineDeclsContext _localctx = new PipelineDeclsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pipelineDecls);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(36);
				pipelineDeclaration();
				}
				}
				setState(39); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Pipeline );
			setState(41);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PipelineContext extends ParserRuleContext {
		public PipelineDeclarationContext pipelineDeclaration() {
			return getRuleContext(PipelineDeclarationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(RuleLangParser.EOF, 0); }
		public PipelineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pipeline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).enterPipeline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).exitPipeline(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleLangVisitor ) return ((RuleLangVisitor<? extends T>)visitor).visitPipeline(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PipelineContext pipeline() throws RecognitionException {
		PipelineContext _localctx = new PipelineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pipeline);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			pipelineDeclaration();
			setState(44);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PipelineDeclarationContext extends ParserRuleContext {
		public Token name;
		public TerminalNode Pipeline() { return getToken(RuleLangParser.Pipeline, 0); }
		public TerminalNode End() { return getToken(RuleLangParser.End, 0); }
		public TerminalNode String() { return getToken(RuleLangParser.String, 0); }
		public List<StageDeclarationContext> stageDeclaration() {
			return getRuleContexts(StageDeclarationContext.class);
		}
		public StageDeclarationContext stageDeclaration(int i) {
			return getRuleContext(StageDeclarationContext.class,i);
		}
		public PipelineDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pipelineDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).enterPipelineDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).exitPipelineDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleLangVisitor ) return ((RuleLangVisitor<? extends T>)visitor).visitPipelineDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PipelineDeclarationContext pipelineDeclaration() throws RecognitionException {
		PipelineDeclarationContext _localctx = new PipelineDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pipelineDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(Pipeline);
			setState(47);
			((PipelineDeclarationContext)_localctx).name = match(String);
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48);
				stageDeclaration();
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Stage );
			setState(53);
			match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StageDeclarationContext extends ParserRuleContext {
		public Token stage;
		public Token modifier;
		public TerminalNode Stage() { return getToken(RuleLangParser.Stage, 0); }
		public TerminalNode Match() { return getToken(RuleLangParser.Match, 0); }
		public TerminalNode Integer() { return getToken(RuleLangParser.Integer, 0); }
		public TerminalNode All() { return getToken(RuleLangParser.All, 0); }
		public TerminalNode Either() { return getToken(RuleLangParser.Either, 0); }
		public List<RuleRefContext> ruleRef() {
			return getRuleContexts(RuleRefContext.class);
		}
		public RuleRefContext ruleRef(int i) {
			return getRuleContext(RuleRefContext.class,i);
		}
		public StageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).enterStageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).exitStageDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleLangVisitor ) return ((RuleLangVisitor<? extends T>)visitor).visitStageDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StageDeclarationContext stageDeclaration() throws RecognitionException {
		StageDeclarationContext _localctx = new StageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stageDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(Stage);
			setState(56);
			((StageDeclarationContext)_localctx).stage = match(Integer);
			setState(57);
			match(Match);
			setState(58);
			((StageDeclarationContext)_localctx).modifier = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==All || _la==Either) ) {
				((StageDeclarationContext)_localctx).modifier = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Rule) {
				{
				{
				setState(59);
				ruleRef();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleRefContext extends ParserRuleContext {
		public Token name;
		public TerminalNode Rule() { return getToken(RuleLangParser.Rule, 0); }
		public TerminalNode String() { return getToken(RuleLangParser.String, 0); }
		public RuleRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).enterRuleRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).exitRuleRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleLangVisitor ) return ((RuleLangVisitor<? extends T>)visitor).visitRuleRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleRefContext ruleRef() throws RecognitionException {
		RuleRefContext _localctx = new RuleRefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ruleRef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(Rule);
			setState(66);
			((RuleRefContext)_localctx).name = match(String);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(67);
				match(T__0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleDeclsContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RuleLangParser.EOF, 0); }
		public List<RuleDeclarationContext> ruleDeclaration() {
			return getRuleContexts(RuleDeclarationContext.class);
		}
		public RuleDeclarationContext ruleDeclaration(int i) {
			return getRuleContext(RuleDeclarationContext.class,i);
		}
		public RuleDeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleDecls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).enterRuleDecls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).exitRuleDecls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleLangVisitor ) return ((RuleLangVisitor<? extends T>)visitor).visitRuleDecls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleDeclsContext ruleDecls() throws RecognitionException {
		RuleDeclsContext _localctx = new RuleDeclsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ruleDecls);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				ruleDeclaration();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Rule );
			setState(75);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleDeclarationContext extends ParserRuleContext {
		public Token name;
		public ExpressionContext condition;
		public StatementContext actions;
		public TerminalNode Rule() { return getToken(RuleLangParser.Rule, 0); }
		public TerminalNode When() { return getToken(RuleLangParser.When, 0); }
		public TerminalNode End() { return getToken(RuleLangParser.End, 0); }
		public TerminalNode String() { return getToken(RuleLangParser.String, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Then() { return getToken(RuleLangParser.Then, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public RuleDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).enterRuleDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleLangListener ) ((RuleLangListener)listener).exitRuleDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleLangVisitor ) return ((RuleLangVisitor<? extends T>)visitor).visitRuleDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleDeclarationContext ruleDeclaration() throws RecognitionException {
		RuleDeclarationContext _localctx = new RuleDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ruleDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(Rule);
			setState(78);
			((RuleDeclarationContext)_localctx).name = match(String);
			setState(79);
			match(When);
			setState(80);
			((RuleDeclarationContext)_localctx).condition = expression(0);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Then) {
				{
				setState(81);
				match(Then);
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << Let) | (1L << Identifier))) != 0)) {
					{
					{
					setState(82);
					((RuleDeclarationContext)_localctx).actions = statement();
					}
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(90);
			match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
